# Mohses_Refactor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.diff  README.md.orig  README.md.rej
amm-library/: CMakeLists.txt
amm-library/IDL/: CMakeLists.txt
amm-library/cmake/: FindSQLite3.cmake
amm-library/doc/: CMakeLists.txt  Doxyfile.in  main.md
amm-library/src/amm/: AMM_StandardPubSubTypes.cxx  Utility.h
cmake/: FindCodeSynthesis.cmake  FindTinyXML2.cmake  Packing.cmake  common_logic.cmake  fixup_bundle.cmake  foonathan_memory_vendorConfig.cmake.in  gaurentee_TinyXML2.cmake  gaurentee_availability.cmake  gaurentee_boost.cmake  gaurentee_fastcdr.cmake  gaurentee_fastddr.cmake  gaurentee_foonathan_memory.cmake  gaurentee_openssl.cmake
cmake/tests/: boost.cpp  fastcdr.cpp  foonathan_memory.cpp
cmake/toolchains/: aarch64-linux-gnu.cmake
etc/supervisor/: README.md  module.conf.in  mohses_module_manager.conf  mohses_physiology_manager.conf  mohses_rest_adapter.conf  mohses_sim_manager.conf  mohses_tcp_bridge.conf
libraries/: CMakeLists.txt
libraries/amm/: CMakeLists.txt
libraries/amm/IDL/: AMM_Extended.idl  AMM_Standard.idl
libraries/amm/src/: CMakeLists.txt  amm_std.h
libraries/amm/src/amm/: AMM_Extended.cxx  AMM_ExtendedPubSubTypes.cxx  AMM_ExtendedPubSubTypes.h  AMM_Standard.cxx  BaseLogger.cpp  BaseLogger.h  Utility.cpp
libraries/net/: .editorconfig  .gitignore  CMakeLists.txt
libraries/net/cmake/: osmacros.cmake
libraries/net/include/mohses/: AmmDataType.h  DDSManager.h  DDS_Listeners.h  DDS_Log_Appender.h  TopicNames.h  Utility.h  exports.h  net.h
libraries/net/include/plog/Initializers/: RollingFileInitializer.h
libraries/net/src/: BaseLogger.cpp  DDS_Listeners.cpp  Utility.cpp
libraries/net/src/idl/: AMM_Extended.h  AMM_ExtendedPubSubTypes.h  AMM_Standard.h  AMM_StandardPubSubTypes.h
module-manager/: README.md
module-manager/config/: module_manager_capabilities.xml  module_manager_configuration.xml
module-manager/src/: ModuleManager.cpp
module-manager/static/scenarios/: BVM.xml
modules/: CMakeLists.txt  constants.h.in
modules/module-manager/: .editorconfig  CMakeLists.txt  Doxyfile.in
modules/module-manager/config/: module_manager_amm.xml
modules/module-manager/src/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  ModuleManagerMain.cpp
modules/module-manager/static/scenarios/: Cricothyrotomy.xml  Pneumothorax.xml  RSI.xml
modules/physiology-manager/: .clang-format  CMakeLists.txt  Doxyfile.in  README.md
modules/physiology-manager/cmake/: FindCodeSynthesis.cmake  FindTinyXML2.cmake  FindXerces-c.cmake
modules/physiology-manager/config/: pe_manager_amm.xml
modules/physiology-manager/src/: CMakeLists.txt  PhysiologyManager.cpp
modules/physiology-manager/src/AMM/: BiogearsThread.cpp  BiogearsThread.h  PhysiologyEngineManager.cpp  PhysiologyEngineManager.h
modules/rest-adapter/: CMakeLists.txt  Doxyfile.in
modules/rest-adapter/cmake/: Packing.cmake
modules/rest-adapter/config/: rest_adapter_amm.xml
modules/rest-adapter/src/: CMakeLists.txt  RESTAdapterMain.cpp
modules/simulation-manager/: CMakeLists.txt  Doxyfile.in  README.md
modules/simulation-manager/config/: sim_manager_amm.xml  sim_manager_configuration.xml
modules/simulation-manager/src/: CMakeLists.txt  SimManager.cpp  SimulationManager.cpp  SimulationManager.h
modules/tcp-bridge/: CMakeLists.txt  README.md
modules/tcp-bridge/cmake/: FindTinyXML2.cmake  Packing.cmake
modules/tcp-bridge/config/: tcp_bridge_ajams.xml  tcp_bridge_capabilities.xml  tcp_bridge_configuration.xml
modules/tcp-bridge/src/: CMakeLists.txt  Manikin.cpp  Manikin.h  TCPBridgeMain.cpp  TPMS.cpp  TPMS.h  bridge.cpp
modules/tcp-bridge/src/Net/: Client.cpp  Client.h  Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  UdpDiscoveryServer.cpp  UdpDiscoveryServer.h
physiology-manager/config/: pe_manager_capabilities.xml  pe_manager_configuration.xml
physiology-manager/src/AMM/: BiogearsThread.h  PhysiologyEngineManager.h
physiology-manager/support/: CMakeLists.txt
physiology-manager/support/override/: BioGearsOverride.xml
rest-adapter/: .gitignore  README.md
rest-adapter/config/: rest_adapter_capabilities.xml  rest_adapter_configuration.xml
scripts/: fixup_bundle.py
simulation-manager/config/: sim_manager_capabilities.xml
tcp-bridge/: .gitignore  Doxyfile.in
tcp-bridge/src/: CMakeLists.txt  Manikin.cpp  TCPBridgeMain.cpp  TPMS.cpp  bridge.h
tcp-bridge/src/Net/: Server.cpp  ServerThread.cpp  ServerThread.h
